methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:16: error: illegal start of simple expression
  var arr = [[1,2], [2,3]];
            ^PictureMono1:19: error: identifier expected but integer literal found.
    xx = arr[i][0];
                ^PictureMono1:19: error: ']' expected but ';' found.
    xx = arr[i][0];
                  ^PictureMono1:20: error: identifier expected but integer literal found.
    yy = arr[i][1];
                ^PictureMono1:20: error: ']' expected but ';' found.
    yy = arr[i][1];
                  ^