methods.picture.PictureMono1.scala.code
override def run() = {
  makeX(0,3)
  makeX(6,3)
  makeX(3,6)
  makeX(3,0)
}

def pushpt(x:Int, y:Int) = { 
  setPos(x,y);
	brushDown();
  brushUp();
}

def makeX(x:Int,y:Int) = {
//  var arr = Array( [x-1,j], [x+1,j], [x,j-1], [x,j+1] );
	var arr = [[1,2], [2,3]];
  
  for (i <- 0 to 3) {
    xx = arr[i][0];
    yy = arr[i][1];
    if (xx*yy != 0 && xx < 7 and yy <7)
    	pushpt(xx,yy);
  }
}
  
  